singleuser-sample image: adjust notes and formatting

--- a/images/singleuser-sample/Dockerfile
+++ b/images/singleuser-sample/Dockerfile
@@ -5,10 +5,6 @@ FROM jupyter/base-notebook:latest
 
 # VULN_SCAN_TIME=2022-05-15_02:03:52
 
-# The jupyter/docker-stacks images contains jupyterhub and jupyterlab already.
-
-# Example install of git and nbgitpuller.
-# NOTE: git is already available in the jupyter/minimal-notebook image.
 USER root
 RUN apt-get update \
  && apt-get upgrade -y \
@@ -20,12 +16,11 @@ RUN apt-get update \
 USER $NB_USER
 
 COPY requirements.txt /tmp/requirements.txt
-RUN python -m pip install --no-cache-dir \
-    -r /tmp/requirements.txt
+RUN pip install --no-cache-dir \
+        -r /tmp/requirements.txt
 
+# nbgitpuller is installed in requirements.txt for demo purposes, and this
+# enables it to function.
 RUN jupyter serverextension enable --py nbgitpuller --sys-prefix
-
-# Uncomment the line below to make nbgitpuller default to start up in JupyterLab
-#ENV NBGITPULLER_APP=lab
 
 # conda/pip/apt install additional packages here, if desired.
