feat: add singleUser.k8sApiRequestTimeout value.

--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -387,6 +387,7 @@ singleuser:
     pullPolicy:
     pullSecrets: []
   startTimeout: 300
+  k8sApiRequestTimeout: 3
   cpu:
     limit:
     guarantee:
