feat!: Implement `serviceAccount.create` This feature introduces a new `.serviceAccount.create` for all `ServiceAccount` resources, which defaults to `true`. BREAKING CHANGE: This is a breaking change for all users with `rbac.enabled` set to `false`.

--- a/jupyterhub/templates/hub/deployment.yaml
+++ b/jupyterhub/templates/hub/deployment.yaml
@@ -75,7 +75,7 @@ spec:
           persistentVolumeClaim:
             claimName: {{ include "jupyterhub.hub-pvc.fullname" . }}
         {{- end }}
-      {{- if .Values.rbac.enabled }}
+      {{- if .Values.hub.serviceAccount.create }}
       serviceAccountName: {{ include "jupyterhub.hub.fullname" . }}
       {{- end }}
       {{- with .Values.hub.podSecurityContext }}
