--- a/jupyterhub/templates/scheduling/user-scheduler/rbac.yaml
+++ b/jupyterhub/templates/scheduling/user-scheduler/rbac.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.scheduling.userScheduler.enabled -}}
-{{- if .Values.rbac.enabled }}
+{{- if .Values.scheduling.userScheduler.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -10,6 +10,8 @@ metadata:
   annotations:
     {{- . | toYaml | nindent 4 }}
   {{- end }}
+{{- end }}
+{{- if .Values.rbac.enabled }}
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
