--- a/jupyterhub/templates/image-puller/rbac.yaml
+++ b/jupyterhub/templates/image-puller/rbac.yaml
@@ -1,8 +1,8 @@
 {{- /*
 Permissions to be used by the hook-image-awaiter job
 */}}
-{{- if .Values.rbac.enabled }}
-{{- if (include "jupyterhub.imagePuller.daemonset.hook.install" .) }}
+{{- if .Values.rbac.enabled -}}
+{{- if (include "jupyterhub.imagePuller.daemonset.hook.install" .) -}}
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
