--- a/jupyterhub/templates/proxy/autohttps/serviceaccount.yaml
+++ b/jupyterhub/templates/proxy/autohttps/serviceaccount.yaml
@@ -1,7 +1,7 @@
-{{- $HTTPS := (and .Values.proxy.https.hosts .Values.proxy.https.enabled) }}
-{{- $autoHTTPS := (and $HTTPS (eq .Values.proxy.https.type "letsencrypt")) }}
+{{- $HTTPS := (and .Values.proxy.https.hosts .Values.proxy.https.enabled) -}}
+{{- $autoHTTPS := (and $HTTPS (eq .Values.proxy.https.type "letsencrypt")) -}}
 {{- if $autoHTTPS -}}
-{{- if .Values.proxy.traefik.serviceAccount.create }}
+{{- if .Values.proxy.traefik.serviceAccount.create -}}
 ---
 apiVersion: v1
 kind: ServiceAccount
