--- a/jupyterhub/templates/scheduling/user-scheduler/serviceaccount.yaml
+++ b/jupyterhub/templates/scheduling/user-scheduler/serviceaccount.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.scheduling.userScheduler.enabled -}}
-{{- if .Values.scheduling.userScheduler.serviceAccount.create }}
+{{- if .Values.scheduling.userScheduler.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
