feat: Implement `serviceAccount.name` This allows the user to set the name of the serviceAccounts that are created If no name is given, the default is the deployment (or job) name for the respective account

--- a/jupyterhub/templates/hub/deployment.yaml
+++ b/jupyterhub/templates/hub/deployment.yaml
@@ -76,7 +76,7 @@ spec:
             claimName: {{ include "jupyterhub.hub-pvc.fullname" . }}
         {{- end }}
       {{- if .Values.hub.serviceAccount.create }}
-      serviceAccountName: {{ include "jupyterhub.hub.fullname" . }}
+      serviceAccountName: {{ include "jupyterhub.hub-serviceaccount.fullname" . }}
       {{- end }}
       {{- with .Values.hub.podSecurityContext }}
       securityContext:
