--- a/jupyterhub/templates/image-puller/serviceaccount.yaml
+++ b/jupyterhub/templates/image-puller/serviceaccount.yaml
@@ -7,7 +7,7 @@ ServiceAccount for the pre-puller hook's image-awaiter-job
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "jupyterhub.hook-image-awaiter.fullname" . }}
+  name: {{ include "jupyterhub.hook-image-awaiter-serviceaccount.fullname" . }}
   labels:
     {{- include "jupyterhub.labels" . | nindent 4 }}
     hub.jupyter.org/deletable: "true"
