--- a/jupyterhub/templates/scheduling/user-scheduler/serviceaccount.yaml
+++ b/jupyterhub/templates/scheduling/user-scheduler/serviceaccount.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "jupyterhub.user-scheduler-deploy.fullname" . }}
+  name: {{ include "jupyterhub.user-scheduler-serviceaccount.fullname" . }}
   labels:
     {{- include "jupyterhub.labels" . | nindent 4 }}
   {{- with .Values.scheduling.userScheduler.serviceAccount.annotations }}
