--- a/jupyterhub/templates/hub/serviceaccount.yaml
+++ b/jupyterhub/templates/hub/serviceaccount.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "jupyterhub.hub.fullname" . }}
+  name: {{ include "jupyterhub.hub-serviceaccount.fullname" . }}
   {{- with .Values.hub.serviceAccount.annotations }}
   annotations:
     {{- . | toYaml | nindent 4 }}
