--- a/jupyterhub/templates/proxy/autohttps/deployment.yaml
+++ b/jupyterhub/templates/proxy/autohttps/deployment.yaml
@@ -28,7 +28,7 @@ spec:
         checksum/static-config: {{ include "jupyterhub.traefik.yaml" . | fromYaml | merge .Values.proxy.traefik.extraStaticConfig | toYaml | sha256sum }}
     spec:
       {{- if .Values.proxy.traefik.serviceAccount.create }}
-      serviceAccountName: {{ include "jupyterhub.autohttps.fullname" . }}
+      serviceAccountName: {{ include "jupyterhub.autohttps-serviceaccount.fullname" . }}
       {{- end }}
       {{- if .Values.scheduling.podPriority.enabled }}
       priorityClassName: {{ include "jupyterhub.priority.fullname" . }}
