--- a/tools/templates/lint-and-validate-values.yaml
+++ b/tools/templates/lint-and-validate-values.yaml
@@ -181,8 +181,12 @@ hub:
       privateIPs: false
     egress:
       - to:
-          - ipBlock:
-              cidr: 0.0.0.0/0
+          - podSelector:
+              matchLabels:
+                app: my-k8s-local-service
+        ports:
+          - protocol: TCP
+            port: 5978
     interNamespaceAccessLabels: ignore
     allowedIngressPorts: []
   allowNamedServers: true
