--- a/jupyterhub/templates/image-puller/rbac.yaml
+++ b/jupyterhub/templates/image-puller/rbac.yaml
@@ -1,7 +1,7 @@
 {{- /*
 Permissions to be used by the hook-image-awaiter job
 */}}
-{{- if .Values.rbac.enabled -}}
+{{- if .Values.rbac.create -}}
 {{- if (include "jupyterhub.imagePuller.daemonset.hook.install" .) -}}
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
