--- a/images/hub/requirements.in
+++ b/images/hub/requirements.in
@@ -10,7 +10,7 @@ jupyterhub==2.3.0
 jupyterhub-firstuseauthenticator>=1
 jupyterhub-hmacauthenticator
 jupyterhub-ldapauthenticator
-jupyterhub-ltiauthenticator
+jupyterhub-ltiauthenticator!=1.3.0
 jupyterhub-nativeauthenticator
 jupyterhub-tmpauthenticator
 nullauthenticator
