--- a/images/hub/requirements.txt
+++ b/images/hub/requirements.txt
@@ -8,7 +8,7 @@ aiohttp==3.8.1
     # via kubernetes-asyncio
 aiosignal==1.2.0
     # via aiohttp
-alembic==1.7.7
+alembic==1.8.0
     # via jupyterhub
 async-generator==1.10
     # via jupyterhub
@@ -37,12 +37,7 @@ charset-normalizer==2.0.12
     #   aiohttp
     #   requests
 cryptography==37.0.2
-    # via
-    #   josepy
-    #   jwcrypto
-    #   pyopenssl
-deprecated==1.2.13
-    # via jwcrypto
+    # via pyopenssl
 entrypoints==0.4
     # via jupyterhub
 escapism==1.0.1
@@ -53,8 +48,6 @@ frozenlist==1.3.0
     # via
     #   aiohttp
     #   aiosignal
-future==0.18.2
-    # via pyjwkest
 greenlet==1.1.2
     # via sqlalchemy
 idna==3.3
@@ -65,9 +58,7 @@ jinja2==3.1.2
     # via
     #   jupyterhub
     #   jupyterhub-kubespawner
-josepy==1.13.0
-    # via jupyterhub-ltiauthenticator
-jsonschema==4.5.1
+jsonschema==4.6.0
     # via jupyter-telemetry
 jupyter-telemetry==0.1.0
     # via jupyterhub
@@ -91,14 +82,12 @@ jupyterhub-kubespawner==4.1.0
     # via -r requirements.in
 jupyterhub-ldapauthenticator==1.3.2
     # via -r requirements.in
-jupyterhub-ltiauthenticator==1.3.0
+jupyterhub-ltiauthenticator==1.2.0
     # via -r requirements.in
 jupyterhub-nativeauthenticator==1.0.5
     # via -r requirements.in
 jupyterhub-tmpauthenticator==0.6
     # via -r requirements.in
-jwcrypto==1.3.1
-    # via jupyterhub-ltiauthenticator
 kubernetes-asyncio==22.6.5
     # via jupyterhub-kubespawner
 ldap3==2.9.1
@@ -118,9 +107,7 @@ mwoauth==0.3.8
 nullauthenticator==1.0.0
     # via -r requirements.in
 oauthenticator==14.2.0
-    # via
-    #   -r requirements.in
-    #   jupyterhub-ltiauthenticator
+    # via -r requirements.in
 oauthlib==3.2.0
     # via
     #   jupyterhub
@@ -133,8 +120,6 @@ packaging==21.3
     # via jupyterhub
 pamela==1.0.0
     # via jupyterhub
-pem==21.2.0
-    # via jupyterhub-ltiauthenticator
 prometheus-client==0.14.1
     # via jupyterhub
 psycopg2-binary==2.9.3
@@ -145,25 +130,16 @@ pyasn1==0.4.8
     # via ldap3
 pycparser==2.21
     # via cffi
-pycryptodome==3.14.1
-    # via jupyterhub-ltiauthenticator
-pycryptodomex==3.14.1
-    # via pyjwkest
 pycurl==7.45.1
     # via -r requirements.in
-pyjwkest==1.4.2
-    # via jupyterhub-ltiauthenticator
-pyjwt==1.7.1
+pyjwt==2.4.0
     # via
     #   -r requirements.in
-    #   jupyterhub-ltiauthenticator
     #   mwoauth
 pymysql==1.0.2
     # via -r requirements.in
 pyopenssl==22.0.0
-    # via
-    #   certipy
-    #   josepy
+    # via certipy
 pyparsing==3.0.9
     # via packaging
 pyrsistent==0.18.1
@@ -185,7 +161,6 @@ requests==2.27.1
     # via
     #   jupyterhub
     #   mwoauth
-    #   pyjwkest
     #   requests-oauthlib
 requests-oauthlib==1.3.1
     # via mwoauth
@@ -198,9 +173,8 @@ six==1.16.0
     #   kubernetes-asyncio
     #   mwoauth
     #   onetimepass
-    #   pyjwkest
     #   python-dateutil
-sqlalchemy==1.4.36
+sqlalchemy==1.4.37
     # via
     #   alembic
     #   jupyterhub
@@ -216,7 +190,7 @@ tornado==6.1
     #   jupyterhub
     #   jupyterhub-idle-culler
     #   jupyterhub-ldapauthenticator
-traitlets==5.2.1.post0
+traitlets==5.2.2.post1
     # via
     #   jupyter-telemetry
     #   jupyterhub
@@ -226,8 +200,6 @@ urllib3==1.26.9
     #   jupyterhub-kubespawner
     #   kubernetes-asyncio
     #   requests
-wrapt==1.14.1
-    # via deprecated
 yarl==1.7.2
     # via aiohttp
 
