--- a/.github/workflows/watch-dependencies.yaml
+++ b/.github/workflows/watch-dependencies.yaml
@@ -8,12 +8,23 @@
 #   latest jupyterhub version available on PyPI, and if doing this, also
 #   refreeze images/hub/requirements.txt.
 #
+# About environment: watch-dependencies
+#
+# To reduce the exposure of the secrets.jupyterhub_bot_pat token that was setup
+# for the environment watch-dependencies, we have setup a dedicated environment
+# according to steps in
+# https://github.com/jupyterhub/team-compass/issues/516#issuecomment-1129961954.
+#
 name: Watch dependencies
 
 on:
   push:
     paths:
+      - "images/hub/Dockerfile"
+      - "images/hub/requirements.in"
+      - "images/hub/requirements.txt"
       - ".github/workflows/watch-dependencies.yaml"
+    branches: ["main"]
   schedule:
     # Run at 05:00 every day, ref: https://crontab.guru/#0_5_*_*_*
     - cron: "0 5 * * *"
@@ -24,6 +35,7 @@ jobs:
     # Don't run this job on forks
     if: github.repository == 'jupyterhub/zero-to-jupyterhub-k8s'
     runs-on: ubuntu-20.04
+    environment: watch-dependencies
 
     strategy:
       fail-fast: false
@@ -121,6 +133,7 @@ jobs:
     # Don't run this job on forks
     if: github.repository == 'jupyterhub/zero-to-jupyterhub-k8s'
     runs-on: ubuntu-20.04
+    environment: watch-dependencies
 
     steps:
       - uses: actions/checkout@v3
@@ -148,21 +161,6 @@ jobs:
           sed --in-place 's/jupyterhub==${{ steps.local.outputs.version }}/jupyterhub==${{ steps.latest.outputs.version }}/g' images/singleuser-sample/requirements.txt
           sed --in-place 's/appVersion: "${{ steps.local.outputs.version }}"/appVersion: "${{ steps.latest.outputs.version }}"/g' jupyterhub/Chart.yaml
 
-      - name: Refreeze images/hub/requirements.txt based on images/hub/requirements.in
-        if: steps.local.outputs.version != steps.latest.outputs.version
-        # NOTE: If you make an update to this script, also update the
-        #       images/hub/README.md file.
-        #
-        run: |
-          cd images/hub
-          docker run --rm \
-              --env=CUSTOM_COMPILE_COMMAND="see README.md" \
-              --volume=$PWD:/io \
-              --workdir=/io \
-              --user=root \
-              python:3.9-bullseye \
-              sh -c 'pip install pip-tools==6.* && pip-compile --upgrade'
-
       - name: git diff
         if: steps.local.outputs.version != steps.latest.outputs.version
         run: git --no-pager diff --color=always
@@ -182,3 +180,52 @@ jobs:
           body: >-
             A new jupyterhub version has been detected, version
             `${{ steps.latest.outputs.version }}`.
+
+  refreeze-dockerfile-requirements-txt:
+    # Don't run this job on forks, but also not on the daily schedule to reduce
+    # noise. If we could run this weekly that would be reasonable, but updating
+    # these dependencies every day is too much noise.
+    #
+    if: github.repository == 'jupyterhub/zero-to-jupyterhub-k8s' && github.event_name != 'schedule'
+    runs-on: ubuntu-latest
+    environment: watch-dependencies
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Refreeze images/hub/requirements.txt based on images/hub/requirements.in
+        # Because `pip-compile` resolves `requirements.txt` with the current
+        # Python for the current platform, it should be run on the same Python
+        # version and platform as our Dockerfile.
+        #
+        # Note that as of 2022-05-29, `pip-compile` has issues with `pycurl`,
+        # but we workaround them by by omitting the `-slim` part from the image
+        # in the command below.
+        #
+        run: |
+          cd images/hub
+          docker run --rm \
+              --env=CUSTOM_COMPILE_COMMAND='Use the "Run workflow" button at https://github.com/jupyterhub/zero-to-jupyterhub-k8s/actions/workflows/watch-dependencies.yaml' \
+              --volume=$PWD:/io \
+              --workdir=/io \
+              --user=root \
+              python:3.9-bullseye \
+              sh -c 'pip install pip-tools==6.* && pip-compile --upgrade'
+
+      - name: git diff
+        run: git --no-pager diff --color=always
+
+      # ref: https://github.com/peter-evans/create-pull-request
+      - name: Create a PR
+        uses: peter-evans/create-pull-request@v4
+        with:
+          token: "${{ secrets.jupyterhub_bot_pat }}"
+          author: JupyterHub Bot Account <105740858+jupyterhub-bot@users.noreply.github.com>
+          committer: JupyterHub Bot Account <105740858+jupyterhub-bot@users.noreply.github.com>
+          branch: update-image-requirements
+          labels: dependencies
+          commit-message: "hub image: refreeze requirements.txt"
+          title: "hub image: refreeze requirements.txt"
+          body: >-
+            The hub image's requirements.txt has been refrozen based on
+            requirements.in.
