ci: specify python-version epxlicitly, use 3.9

--- a/.github/workflows/test-chart.yaml
+++ b/.github/workflows/test-chart.yaml
@@ -32,6 +32,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
 
       - name: Install dependencies
         run: pip install pre-commit
@@ -45,7 +47,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.8"
+          python-version: "3.9"
 
       - name: Install dependencies
         run: pip install chartpress yamllint
@@ -78,7 +80,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.8"
+          python-version: "3.9"
 
       - name: Install dependencies
         run: |
@@ -198,11 +200,9 @@ jobs:
           traefik-enabled: false
           docker-enabled: true
 
-      # NOTE: actions/setup-python@v4 make use of a cache within the GitHub base
-      #       environment and setup in a fraction of a second.
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.8"
+          python-version: "3.9"
 
       # Install a local ACME server to fill the role of Let's Encrypt (LE). We
       # do this as the HTTP challenge sent out by an ACME server must be able to
