--- a/images/hub/Dockerfile
+++ b/images/hub/Dockerfile
@@ -3,6 +3,7 @@
 FROM python:3.9-bullseye as build-stage
 
 # VULN_SCAN_TIME=2022-05-30_05:27:26
+# dummy change for testing purposes
 
 WORKDIR /build-stage
 
