Helm chart feature to annotate the user-scheduler pods

--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -506,6 +506,7 @@ scheduling:
       pullSecrets: []
     nodeSelector: {}
     tolerations: []
+    annotations: {}
     pdb:
       enabled: true
       maxUnavailable: 1
