--- a/jupyterhub/templates/scheduling/user-placeholder/statefulset.yaml
+++ b/jupyterhub/templates/scheduling/user-placeholder/statefulset.yaml
@@ -23,9 +23,9 @@ spec:
   serviceName: {{ include "jupyterhub.user-placeholder.fullname" . }}
   template:
     metadata:
-      {{- if .Values.scheduling.userPlaceholder.annotations }}
+      {{- with .Values.scheduling.userPlaceholder.annotations }}
       annotations:
-        {{- toYaml .Values.scheduling.userPlaceholder.annotations | nindent 8 }}
+        {{- . | toYaml | nindent 8 }}
       {{- end }}
       labels:
         {{- /* Changes here will cause the Deployment to restart the pods. */}}
