docs: remove broken links and use https over http in a few

--- a/.github/workflows/support-bot.yml
+++ b/.github/workflows/support-bot.yml
@@ -21,7 +21,7 @@ jobs:
 
             I closed this issue because it was labelled as a support question.
 
-            Please help us organize discussion by posting this on the http://discourse.jupyter.org/ forum. If it's your first time posting
+            Please help us organize discussion by posting this on the https://discourse.jupyter.org/ forum. If it's your first time posting
             please read https://discourse.jupyter.org/t/getting-good-answers-to-your-questions/1825.
             The more information you provide the more likely we can help you.
 
