ci postgres: use `--repo` instead of `helm repo add`
Co-authored-by: Erik Sundell <erik.i.sundell@gmail.com>

--- a/.github/workflows/test-chart.yaml
+++ b/.github/workflows/test-chart.yaml
@@ -271,8 +271,7 @@ jobs:
         if: matrix.setup-postgresql-args
         run: |
           . ./ci/common
-          helm repo add bitnami https://charts.bitnami.com/bitnami
-          helm install postgresql bitnami/postgresql ${{ matrix.setup-postgresql-args }}
+          helm install postgresql postgresql --repo=https://charts.bitnami.com/bitnami ${{ matrix.setup-postgresql-args }}
           await_kubectl_rollout statefulset/postgresql
 
       - name: "(Upgrade) Install ${{ matrix.upgrade-from }} chart"
