Restore jupyterhub-singleuser as the default command
update docs to explain explicit `cmd: null` use case

--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -394,7 +394,7 @@ singleuser:
   extraResource:
     limits: {}
     guarantees: {}
-  cmd:
+  cmd: jupyterhub-singleuser
   defaultUrl:
   extraPodConfig: {}
   profileList: []
