--- a/images/hub/requirements.in
+++ b/images/hub/requirements.in
@@ -1,5 +1,5 @@
 # This file is the input to requirements.txt,
-# which is is automatically maintained by Dependabot,
+# which is automatically maintained by Dependabot,
 # as configured in .github/dependabot.yaml.
 # It can also be updated by a command described in the
 # README.md file.
