--- a/images/hub/Dockerfile
+++ b/images/hub/Dockerfile
@@ -54,12 +54,8 @@ RUN apt-get update && \
         libcurl4 \
         # requirement for using a local sqlite database
         sqlite3 \
+        tini \
  && rm -rf /var/lib/apt/lists/*
-
-RUN if [ "$(uname -m)" = x86_64 ]; then ARCH=amd64; fi; \
-    if [ "$(uname -m)" = aarch64 ]; then ARCH=arm64; fi; \
-    curl -sSLo /tini "https://github.com/krallin/tini/releases/download/v0.19.0/tini-$ARCH" \
- && chmod +x /tini
 
 COPY --from=build-stage /build-stage/*.whl /tmp/pre-built-wheels/
 COPY requirements.txt /tmp/requirements.txt
@@ -72,5 +68,5 @@ RUN chown ${NB_USER}:${NB_USER} /srv/jupyterhub
 USER ${NB_USER}
 
 EXPOSE 8081
-ENTRYPOINT ["/tini", "--"]
+ENTRYPOINT ["tini", "--"]
 CMD ["jupyterhub", "--config", "/usr/local/etc/jupyterhub/jupyterhub_config.py"]
