Remove not needed build stage

--- a/images/singleuser-sample/Dockerfile
+++ b/images/singleuser-sample/Dockerfile
@@ -1,18 +1,3 @@
-# The build stage
-# ---------------
-FROM python:3.9-bullseye as build-stage
-
-# VULN_SCAN_TIME=
-
-WORKDIR /build-stage
-
-# Build wheels for packages that require gcc or other build dependencies and
-# lack wheels either for amd64 or aarch64.
-COPY requirements.txt requirements.txt
-RUN pip wheel -r requirements.txt
-
-# The final stage
-# ---------------
 FROM python:3.9-slim-bullseye
 
 # VULN_SCAN_TIME=
@@ -25,7 +10,6 @@ ENV DEBIAN_FRONTEND=noninteractive \
     NB_UID=1000 \
     HOME=/home/jovyan
 
-USER root
 RUN apt-get update \
  && apt-get upgrade -y \
  && apt-get install -y --no-install-recommends \
@@ -39,15 +23,6 @@ RUN apt-get update \
  && echo "en_US.UTF-8 UTF-8" > /etc/locale.gen \
  && locale-gen
 
-COPY --from=build-stage /build-stage/*.whl /tmp/pre-built-wheels/
-RUN pip install --no-cache-dir /tmp/pre-built-wheels/*.whl
-
-# nbgitpuller is installed in requirements.txt for demo purposes, and this
-# enables it to function.
-RUN jupyter serverextension enable --py nbgitpuller --sys-prefix
-
-# conda/pip/apt install additional packages here, if desired.
-
 RUN adduser --disabled-password \
         --gecos "Default user" \
         --uid ${NB_UID} \
@@ -56,5 +31,12 @@ RUN adduser --disabled-password \
         ${NB_USER}
 
 USER $NB_USER
+
+COPY requirements.txt /tmp/requirements.txt
+RUN pip install --no-cache-dir -r /tmp/requirements.txt
+
+# nbgitpuller is installed in requirements.txt for demo purposes, and this
+# enables it to function.
+RUN jupyter serverextension enable --py nbgitpuller --sys-prefix
 
 ENTRYPOINT ["tini", "--"]
